--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Session Data files
 .RData
+*.RData
 
 # Example code in package build process
 *-Ex.R
@@ -34,3 +35,7 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+# Output files
+*.html
+*.pdf
